# MAGI-CLI_Subscription-Orchestration

./: .gitignore  .magi.toml.example  LICENSE  README.ja.md  README.md  advisor-orchestrator-handoff.md  pyproject.toml
docs/: plan-style-guide.md
magi/: __init__.py  __main__.py  cancellation.py  cli.py  config.py  io.py  model_catalog.py  model_menu.py  models.py  pipeline.py  prompts.py  runs.py  synthesis.py  verification.py
magi/prompts/: advisor.md  agent.md  debug.md  plan.md  plan_format.md  synth_report.md  synthesis.md
magi/providers/: __init__.py  base.py  external_cli.py  mock.py
scripts/: list_claude_models.py  list_codex_models.py  list_gemini_models.py
tests/: test_agent_cli.py  test_agent_loop.py  test_handoff.py  test_plan_file.py
